# mcp-mesh

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllint.yml  404.html  A2A_SURFACE_DESIGN.org  AC_4_HEALTH_MONITORING_VERIFICATION.md  ADVANCED_SERVICE_DISCOVERY_IMPLEMENTATION.md  AGENT_DEVELOPMENT.md  AIOHTTP_SESSION_CLEANUP.md  ARCHITECTURAL_CONCEPTS_AND_DEVELOPER_RULES.md  AUTO_SESSION_MANAGEMENT_EXAMPLE.md  CLAUDE.md  CNAME  CURRENT_HTTP_STATUS.md  DECORATOR_ORDER_FINDINGS.md  DEPENDENCY_INJECTION_COMPLETE.md  DEPENDENCY_INJECTION_STATUS.md  DEPENDENCY_INJECTION_SUMMARY.md  DNS_FIX_SUMMARY.md  DYNAMIC_DEPENDENCY_UPDATES.md  FASTAPI_INTEGRATION.md  FEATURE_DECISION_LOG.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_TASK_COMPLETION_SUMMARY.md  ISSUES_TO_TACKLE.md  ISSUE_471_IMPLEMENTATION_PLAN.org  K8S_DEPLOYMENT_COMPLETED.md  K8S_DEPLOYMENT_TODO.md  KUBERNETES_COMMANDS.md  MCP_CLIENT_IMPLEMENTATION_PLAN.md  MCP_INTEGRATION_DECISION_LOG.md  MCP_MESH_ENV_VARS.md  MCP_PROTOCOL_VERIFICATION.md  MCP_SDK_EXAMPLES.md  MEDIUM-POST-MULTI-AGENT-POC.md  MESHJOB_DDDI_CONTRACT.md  (+113 more)
examples/complex/data_processor_agent/: .dockerignore  DEVELOPMENT_SETUP.md  Dockerfile  MESH_DECORATORS_USAGE.md  README.md  __init__.py  __main__.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  simple_main.py  test_structure.py
examples/complex/data_processor_agent/config/: __init__.py  settings.py
examples/complex/data_processor_agent/scripts/: build.sh  dev-setup.sh  dev.sh
examples/complex/data_processor_agent/tools/: __init__.py  data_parsing.py  data_transformation.py  export_tools.py  statistical_analysis.py
examples/complex/data_processor_agent/utils/: __init__.py  caching.py  formatting.py  validation.py
src/runtime/core/: Cargo.toml  README.md  build.rs  cbindgen.toml  pyproject.toml
src/runtime/core/include/: mcp_mesh_core.h
src/runtime/core/python/mcp_mesh_core/: __init__.py
src/runtime/core/src/: agentic_loop.rs  cancel_registry.rs  claim_worker.rs  config.rs  events.rs  ffi.rs  handle.rs  heartbeat.rs  job_context.rs  jobs.rs  jobs_ffi.rs  jobs_napi.rs  jobs_py.rs  json_fast.rs  lib.rs  mcp_client.rs  napi.rs  provider.rs  registry.rs  response_parser.rs  runtime.rs  schema.rs  schema_normalize.rs  spec.rs  spire.rs  task_backend.rs  tls.rs  trace_context.rs  tracing_publish.rs  vault.rs
src/runtime/core/typescript/: index.d.ts  index.js  package-lock.json  package.json
src/runtime/python/: README.md  debug_event_loop.py  minimal_test.py  pyproject.toml  requirements-dev.txt  simple_mcp_test.py  test_async_di_timing.py  test_debug_heartbeat_count.py  test_di_flow.py  test_http_server_fix.py  test_http_wrapper_timing.py  test_manual_timing.py  test_mcp_endpoint_debug.py  test_real_processor_flow.py  test_simplified_pipeline.py
src/runtime/python/_mcp_mesh/: __init__.py  reload.py
src/runtime/python/_mcp_mesh/engine/: __init__.py  _structured_output_helpers.py  a2a_card.py  a2a_surfaces.py  async_mcp_client.py  claim_dispatcher.py  decorator_registry.py  dependency_injector.py  dual_module_detection.py  full_mcp_proxy.py  http_wrapper.py  job_context.py  job_dispatch.py  llm_config.py  llm_errors.py  llm_stop_reason.py  mcp_client_proxy.py  mesh_job_submitter.py  mesh_llm_agent.py  mesh_llm_agent_injector.py  response_parser.py  self_dependency_proxy.py  service_view.py  settle.py  signature_analyzer.py  stream_introspection.py  strict_di.py  superseded.py  tool_schema_builder.py  unified_mcp_proxy.py
src/runtime/python/_mcp_mesh/media/: __init__.py  media_store.py  resolver.py
src/runtime/python/_mcp_mesh/pipeline/: __init__.py
src/runtime/python/_mcp_mesh/shared/: agent_identity.py  config_resolver.py  content_extractor.py  fastapi_middleware_manager.py  fastmcp_transport.py  health_check_manager.py  json_fast.py  logging_config.py  port_binding.py  port_bridge.py  registry_client_wrapper.py  simple_shutdown.py  slug.py  sse_parser.py  support_types.py  tls_config.py  tool_executor.py  user_loop_hooks.py
src/runtime/python/_mcp_mesh/tracing/: context.py  execution_tracer.py  fastapi_tracing_middleware.py  redis_metadata_publisher.py  trace_context_helper.py  utils.py
src/runtime/python/_mcp_mesh/utils/: fastmcp_schema_extractor.py
src/runtime/python/mcp_mesh/: __init__.py  decorator_registry.py  fastmcp_integration.py  processor.py  sync_http_client.py  unified_dependencies.py
src/runtime/python/mcp_mesh/engine/: PROCESSOR_RETIREMENT.md  __init__.py  content_extractor.py  decorator_registry.py  dependency_injector.py  generated_registry_client.py  http_wrapper.py  mcp_client_proxy.py  processor.py  processor.py.retired  self_dependency_proxy.py  signature_analyzer.py  sync_http_client.py.old
src/runtime/python/mcp_mesh/pipeline/: __init__.py  orchestrator.py  registry_steps.py  startup_orchestrator.py  startup_pipeline.py  steps.py
src/runtime/python/mcp_mesh/shared/: __init__.py  config_resolver.py  dependency_injector.py  fallback_chain.py  mcp_client_proxy.py  registry_client_pool.py  registry_client_wrapper.py  service_discovery.py  service_discovery_impl.py  service_proxy.py  service_proxy_impl.py  types.py  unified_dependency_resolver.py
src/runtime/python/mcp_mesh/tools/: __init__.py  dependency_injection.py  discovery_tools.py  lifecycle_tools.py  proxy_factory.py  selection_tools.py  versioning_tools.py
src/runtime/python/mesh/: __init__.py  _a2a_consumer.py  _service.py  a2a.py  decorators.py  helpers.py  jobs.py  media.py  types.py  web.py
src/runtime/python/src/mcp_mesh/: __init__.py  decorator_registry.py  decorators.py  decorators_old.py  file_operations.py
src/runtime/python/src/mesh/: __init__.py  decorators.py
src/runtime/python/tests/: conftest.py
src/runtime/python/tests/contract/: test_comprehensive_integration.py  test_testing_infrastructure.py
src/runtime/python/tests/e2e/: __init__.py  test_basic_e2e.py  test_design_vision_scenario.py
src/runtime/python/tests/integration/: README.md  config.py  test_advanced_registry_features.py  (+27 more)
(+5013 files in other folders)
