[package]
name = "mcp-mesh-core"
version = "0.9.0-beta.5"
edition = "2021"
description = "Rust core runtime for MCP Mesh agents"
license = "MIT"
authors = ["MCP Mesh Team"]

[lib]
name = "mcp_mesh_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
typescript = ["dep:napi", "dep:napi-derive"]
ffi = []  # C FFI support for multi-language SDKs

[dependencies]
# Python bindings (optional, enabled by default)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }

# TypeScript/Node.js bindings (optional)
napi = { version = "3", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "3", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Redis for distributed tracing
redis = { version = "0.32.7", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"

[build-dependencies]
cbindgen = "0.27"  # C header generation for FFI
napi-build = "2"   # napi-rs build support

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
