[package]
name = "mcp-mesh-core"
version = "3.0.1"
edition = "2021"
# MSRV. CI builds with moving stable (dtolnay/rust-toolchain@stable);
# this floor documents the newest stdlib API the crate relies on
# (u64::is_multiple_of, stabilized in 1.87) so older toolchains fail
# with a clear error instead of a confusing method-not-found.
rust-version = "1.87"
description = "Rust core runtime for MCP Mesh agents"
license = "MIT"
authors = ["MCP Mesh Team"]

[lib]
name = "mcp_mesh_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python", "simd"]
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
typescript = ["dep:napi", "dep:napi-derive"]
ffi = []  # C FFI support for multi-language SDKs
spire = ["dep:spiffe"]  # SPIRE/SPIFFE workload identity support
simd = ["dep:simd-json"]

[dependencies]
# Python bindings (optional, enabled by default)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }

# TypeScript/Node.js bindings (optional)
napi = { version = "3", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "3", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
simd-json = { version = "0.14", optional = true }
sha2 = "0.10"
hex = "0.4"

# Utilities
async-trait = "0.1"
base64 = "0.22"
spiffe = { version = "0.12", features = ["workload-api-x509"], optional = true }
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Redis for distributed tracing. `connection-manager` provides the
# crate's blessed reconnecting wrapper (`aio::ConnectionManager`): one
# multiplexed connection created at init, cloned per publish, with
# automatic background reconnect when a command fails — instead of a
# fresh TCP dial + handshake per span (issue #1166 MED-3).
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"

[build-dependencies]
cbindgen = "0.27"  # C header generation for FFI
napi-build = "2"   # napi-rs build support

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
