[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcp-mesh-core"
version = "0.9.1"
description = "Rust core runtime for MCP Mesh agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "MCP Mesh Contributors", email = "noreply@mcp-mesh.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/dhyansraj/mcp-mesh"
Repository = "https://github.com/dhyansraj/mcp-mesh"
Issues = "https://github.com/dhyansraj/mcp-mesh/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mcp_mesh_core"
